k8s/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
  namespace: quotehub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: nginx
        image: ${NGINX_WEB_IMAGE}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  namespace: quotehub
spec:
  type: ClusterIP
  selector:
    app: nginx-web
  ports:
  - port: 80
    targetPort: 80
